section intro du japon Fait,

--- a/japon.html
+++ b/japon.html
@@ -30,9 +30,39 @@
         </div>       
     </header>
     <main>
+        <section class="japan-intro-section">
+            <div class="intro-japan">
+                <h1>
+                    Le Japon 日本 
+                </h1>
+                <p>
+                    Situé en Asie de l’Est et séparé du continent par les mers du Japon et de Chine, 
+                    le Japon attire, parce qu’il est à la fois rassurant et dépaysant. Mêlant codes occidentaux et art de vivre japonais, 
+                    effervescence citadine et calme intérieur, ultra-modernité et tradition, rigueur apparente et ouverture, 
+                    le Japon est accessible pour les voyageurs les moins aguerris et déroutant pour les autres. <br><br>
+                    On connaît la richesse culturelle du Japon, on l’imagine moins comme une destination nature. 
+                    Et, pourtant, si l’on sort des sentiers battus, le pays a de quoi surprendre. 
+                    Quelle que soit la saison, venez visiter le Japon, le pays aux mille ambiances !
+                </p>
+            </div>
+        </section>
         <section>
-            <article></article>
-            <div></div>
+            <h2>Osaka</h2>
+            <div class="container-visit">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon-e1559893418945.jpg" alt="image de la ville d'Osaka">
+                <div>
+                    <p>
+                        Troisième ville du Japon et grande métropole du Kansai, 
+                        Osaka est une ville vibrante et attachante. 
+                        Elle est une bonne entrée en matière pour ceux qui visitent le Japon pour la première fois.
+                        Les amoureux de culture pourront y admirer le superbe château d’Osaka ou se rendre au sanctuaire shinto Shumiyoshi Taisha, 
+                        en empruntant un charmant tramway.
+                        Pour sentir l’atmosphère particulière de la ville et déguster les spécialités locales, 
+                        vous pouvez vous balader dans les quartiers de Shinsekai, de Namba et de Dontonbori, 
+                        sans oublier de passer au marché de Kuromon Ichiba.
+                    </p>
+                </div>
+            </div>
         </section>
         <section>
             <article></article>
