--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <header>
+        <img src="media/img/wanderer_logo.png" alt="logo site web">
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
-                <li class="dropdown-menu">
+                <li class="menu-deroulant">
                     <a href="#">Wanderers</a>
-                    <ul class="submenu">
+                    <ul class="sous-menu">
                         <li><a href="france.html">Félix</a></li>
                         <li><a href="france.html">Fériale</a></li>
                         <li><a href="france.html">Ibni</a></li>
@@ -22,9 +23,9 @@
                         <li><a href="france.html">Joris</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu">
+                <li class="menu-deroulant">
                     <a href="#">Continents</a>
-                    <ul class="submenu">
+                    <ul class="sous-menu">
                         <li><a href="europe.html">Europe</a></li>
                         <li><a href="asie.html">Asie</a></li>
                         <li><a href="amerique-centrale.html">Amérique Centrale</a></li>
