contenu ville à visiter Fait a faire section gastronomie

--- a/japon.html
+++ b/japon.html
@@ -46,15 +46,15 @@
                 </p>
             </div>
         </section>
-        <section>
-            <h2>Osaka</h2>
+        <section class="osaka">
+            <div class="titre-villes"><h2>Osaka</h2></div>
             <div class="container-visit">
                 <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon-e1559893418945.jpg" alt="image de la ville d'Osaka">
-                <div>
+                <div class="detail-box">
                     <p>
                         Troisième ville du Japon et grande métropole du Kansai, 
                         Osaka est une ville vibrante et attachante. 
-                        Elle est une bonne entrée en matière pour ceux qui visitent le Japon pour la première fois.
+                        Elle est une bonne entrée en matière pour ceux qui visitent le Japon pour la première fois. <br><br>
                         Les amoureux de culture pourront y admirer le superbe château d’Osaka ou se rendre au sanctuaire shinto Shumiyoshi Taisha, 
                         en empruntant un charmant tramway.
                         Pour sentir l’atmosphère particulière de la ville et déguster les spécialités locales, 
@@ -64,16 +64,160 @@
                 </div>
             </div>
         </section>
-        <section>
-            <article></article>
-            <div></div>
+        <section class="nara">
+            <div class="titre-villes"><h2>Nara</h2></div>
+            <div class="container-visit reverse">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon1-e1559893771594.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Située à moins d’une heure d’Osaka et de Kyoto, 
+                        Nara est une étape incontournable qui en satisfera plus d’un. 
+                        Visiter Nara est l’occasion de mêler culture et nature.
+                        Venez aux origines du Japon, pour contempler le Grand Bouddha de bronze de 
+                        l’immense temple Todai-Ji. Au détour d’une allée, ne soyez pas étonné de croiser des daims. 
+                        Ils vivent en liberté dans le parc et n’hésiteront pas à venir vous saluer !
+                    </p>
+                </div>
+            </div>
         </section>
-        <section>
-            <article></article>
-            <div></div>
+        <section class="kyoto">
+            <div class="titre-villes"><h2>Kyoto</h2></div>
+            <div class="container-visit">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon2-e1559894219646.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Impossible de visiter le Japon sans faire une halte à Kyoto ! 
+                        Ancienne capitale impériale et métropole culturelle par excellence, 
+                        il est difficile de choisir quel temple ou palais visiter, tant ils sont nombreux et somptueux ! 
+                        Du pavillon d’Or, en passant par le sanctuaire Fushimi-Inari ou le château de Nijo, on ne peut être déçu.
+                        Ne quittez pas la ville sans vous être perdu dans la forêt de bambous d’Arashiyama ou avoir déambulé dans les rues du quartier traditionnel de Gion. 
+                        Si vous redoutez la foule, Kyoto a l’avantage d’être une ville aérée, entourée de superbes collines, d’où partent de nombreux sentiers de randonnée. 
+                        Durant l’automne, les feuilles rouges des érables donnent un cachet particulier à Kyoto et ses environs.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="tokyo">
+            <div class="titre-villes"><h2>Tokyo</h2></div>
+            <div class="container-visit reverse">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon7-e1559897506825.jpg.webp" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Que serait le Japon sans Tokyo ? Symbole de l’ultra-modernité et de la démesure, 
+                        temple des jeux vidéo et des nouvelles technologies, Tokyo séduira les amateurs d’expériences singulières.
+                        que les autres voyageurs ne passent pas leur chemin. Découvrez une autre forme de vie tokyoïte, 
+                        loin du bouillonnement de Shibuya ou d’Akihabara, 
+                        en vous promenant dans l’un des nombreux parcs de la capitale ou en flânant dans les adorables quartiers résidentiels et traditionnels.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="mont-fuji">
+            <div class="titre-villes titre-large"><h2>Le Mont Fuji</h2></div>
+            <div class="container-visit">
+                <img src="https://cdn.generationvoyage.fr/2019/04/Mont_Fuji_1554890299-e1554890308363.jpg.webp" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Visiter le Japon sans venir saluer le mont Fuji serait un manque de respect pour les Japonais ! 
+                        Il est difficile de décrire ce volcan sacré, tant sa beauté s’impose comme une évidence. 
+                        On peut l’admirer depuis Kawaguchiko, et faire une balade à vélo autour du lac du même nom.
+                        Hakone est plus touristique et plus éloignée du Fuji, mais offre un choix d’activités plus important. 
+                        Quel qu’en soit le point de départ, les plus courageux pourront s’attaquer à l’ascension du mont Fuji !
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="itsukushima">
+            <div class="titre-villes titre-large"><h2>Le temple d’Itsukushima</h2></div>
+            <div class="container-visit reverse">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon14-e1559910946778.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Le temple d’Itsukushima est célèbre pour son torii rouge qui trône au milieu de l’eau.
+                        Situé sur l’île de Miyajima, au large d’Hiroshima, le sanctuaire est absolument incroyable à visiter, 
+                        en raison du cadre unique dans lequel il est implanté.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="shirakawago">
+            <div class="titre-villes titre-large"><h2>Shirakawago</h2></div>
+            <div class="container-visit">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon5-e1559896594743.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Il n’y a pas que des temples au Japon ! 
+                        Poursuivez votre escapade dans le centre du pays en venant admirer les maisons traditionnelles de Shirakawago, 
+                        les gassho-zukuri.
+                        Déambuler entre ces habitations au toit pentu donne parfois le sentiment de vivre dans un village gaulois !
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="nikko">
+            <div class="titre-villes titre-large"><h2>Nikko</h2></div>
+            <div class="container-visit reverse">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon10-e1559901527314.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Si vous souhaitez mêler culture et nature, Nikko est faite pour vous ! 
+                        Située à cent-cinquante kilomètres au nord de Tokyo, 
+                        elle est l’endroit idéal pour visiter de superbes sanctuaires classés au Patrimoine mondial de l’Unesco, 
+                        tout se promenant dans une forêt de cèdres millénaires.
+                        Pour se détendre après une bonne journée de marche, 
+                        rien de tel que de se baigner dans les onsen de la petite ville thermale de Yumoto. 
+                        Ces sources chaudes vous raviront !
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="hiroshima">
+            <div class="titre-villes titre-large"><h2>Hiroshima</h2></div>
+            <div class="container-visit">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon11-e1559902000795.jpg.webp" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        On ne la présente plus. Il peut sembler étonnant de trouver Hiroshima dans un 
+                        classement des plus beaux endroits à visiter au Japon, pourtant, cette ville est belle par sa résilience.
+                        Victime des bombardements de la Seconde Guerre mondiale, Hiroshima a su se reconstruire et vaut le détour. 
+                        On ne peut rester insensible face à la beauté du message qui se cache derrière le Mémorial et le parc de la paix. 
+                        Lorsque les cerisiers sont en fleurs, c’est encore plus saisissant.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="okinawa">
+            <div class="titre-villes titre-large"><h2>Onkinawa</h2></div>
+            <div class="container-visit reverse">
+                <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon16-e1559911538372.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Des plages de sable blanc au Japon ? Non, vous ne rêvez pas ! 
+                        L’archipel d’Okinawa est situé à moins de deux heures d’avion de Tokyo et vous transporte dans un univers totalement différent.
+                        Prenez le temps de cette escapade unique, qui vous laissera un souvenir impérissable de votre visite au Japon.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="nagoya">
+            <div class="titre-villes titre-large"><h2>Nagoya</h2></div>
+            <div class="container-visit">
+                <img src="https://cdn.generationvoyage.fr/2019/06/shutterstock_1085404574-e1559894577753.jpg" alt="image de la ville d'Osaka">
+                <div class="detail-box">
+                    <p>
+                        Autre métropole de l’île d’Honshu, Nagoya est pourtant différente de ses homologues japonaises. 
+                        Plus paisible qu’Osaka ou Tokyo, Nagoya mérite que l’on s’y attarde autrement que pour y changer de train.
+                        La ville a une beauté singulière qu’il faut savoir apprécier. 
+                        Entre son Bouddha vert géant et l’Oasis 21, monument en forme de navette spatiale, 
+                        ou encore sa métallique TV Tower, Nagoya surprendra plus d’un voyageur ! Dans un registre plus conventionnel, 
+                        vous pourrez visiter le superbe palais Hommaru, d’élégants jardins, 
+                        de multiples temples ou simplement déambuler dans les quartiers de Nagoya.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>    
 </body>
 </html>
-<script></script>
+
