ajouté classe bouton supplémentaire pour liens nav

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
                 <li class="menu-deroulant">
                     <a href="#">Wanderers</a>
                     <ul class="sous-menu">
-                        <li><a href="france.html">Félix</a></li>
-                        <li><a href="france.html">Fériale</a></li>
-                        <li><a href="france.html">Ibni</a></li>
-                        <li><a href="france.html">Jérôme</a></li>
-                        <li><a href="france.html">Joris</a></li>
+                        <li><a class="btn-transition" href="france.html">Félix</a></li>
+                        <li><a class="btn-transition" href="france.html">Fériale</a></li>
+                        <li><a class="btn-transition" href="france.html">Ibni</a></li>
+                        <li><a class="btn-transition" href="france.html">Jérôme</a></li>
+                        <li><a class="btn-transition" href="france.html">Joris</a></li>
                     </ul>
                 </li>
                 <li class="menu-deroulant">
                     <a href="#">Continents</a>
                     <ul class="sous-menu">
-                        <li><a href="europe.html">Europe</a></li>
-                        <li><a href="asie.html">Asie</a></li>
-                        <li><a href="amerique-centrale.html">Amérique Centrale</a></li>
-                        <li><a href="outre-mer.html">Outre-Mer</a></li>
+                        <li><a class="btn-transition" href="europe.html">Europe</a></li>
+                        <li><a class="btn-transition" href="asie.html">Asie</a></li>
+                        <li><a class="btn-transition" href="amerique-centrale.html">Amérique Centrale</a></li>
+                        <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
                     </ul>
                 </li>
             </ul>
