test sur la section gastronomie ok fonctionne, a ajuster

--- a/japon.html
+++ b/japon.html
@@ -216,6 +216,55 @@
                 </div>
             </div>
         </section>
+        <section class="gastronomie">
+            <div class="intro-gastronomie">
+                <h2>La gastronomie</h2>
+                <p>
+                    Pour certains, l’envie de voyager réside dans la tentation de découvrir de nouveaux paysages, 
+                    des populations aux coutumes méconnues, des architectures datant de plusieurs siècles, 
+                    et d’accumuler un maximum de photos du monde… Pour d’autres, 
+                    une bonne raison de voyager serait d’apprendre une nouvelle culture musicale, 
+                    de partir à la chasse aux artistes locaux et de parfaire ses playlists. Enfin, pour les gourmands, voyager est surtout l’occasion d’éveiller ses papilles gustatives ! Goûter de nouvelles associations de produits, découvrir les plats typiques de chaque pays
+
+                </p>
+            </div>
+            <div class="container-gastronomie">
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j1.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Edamame</h3>
+                        <p>
+                            Préparation de fèves immatures, les Edamame sont consommées aussi bien en Chine qu’au Japon, 
+                            ainsi qu’à travers l’Asie du Sud-Est. Souvent assaisonnées seulement de sel, parfois d’épices, 
+                            elles se consomment essentiellement comme en-cas, ou au cours d’un apéro, avant le repas.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j1.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Edamame</h3>
+                        <p>
+                            Préparation de fèves immatures, les Edamame sont consommées aussi bien en Chine qu’au Japon, 
+                            ainsi qu’à travers l’Asie du Sud-Est. Souvent assaisonnées seulement de sel, parfois d’épices, 
+                            elles se consomment essentiellement comme en-cas, ou au cours d’un apéro, avant le repas.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j1.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Edamame</h3>
+                        <p>
+                            Préparation de fèves immatures, les Edamame sont consommées aussi bien en Chine qu’au Japon, 
+                            ainsi qu’à travers l’Asie du Sud-Est. Souvent assaisonnées seulement de sel, parfois d’épices, 
+                            elles se consomment essentiellement comme en-cas, ou au cours d’un apéro, avant le repas.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer></footer>    
 </body>
