--- a/polynésie.html
+++ b/polynésie.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wanderer</title>
+    <link rel="stylesheet" href="css/voyages.css">
+    <link rel="stylesheet" href="polynésie.css">
+</head>
+<body>
+    <header>
+        <img src="media/img/wanderer_logo.png" alt="logo site web">
+        <nav>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li class="menu-deroulant">
+                    <a href="#">Wanderers</a>
+                    <ul class="sous-menu">
+                        <li><a href="france.html">Félix</a></li>
+                        <li><a href="france.html">Fériale</a></li>
+                        <li><a href="france.html">Ibni</a></li>
+                        <li><a href="france.html">Jérôme</a></li>
+                        <li><a href="france.html">Joris</a></li>
+                    </ul>
+                </li>
+                <li class="menu-deroulant">
+                    <a href="#">Continents</a>
+                    <ul class="sous-menu">
+                        <li><a href="europe.html">Europe</a></li>
+                        <li><a href="asie.html">Asie</a></li>
+                        <li><a href="amerique-centrale.html">Amérique Centrale</a></li>
+                        <li><a href="outre-mer.html">Outre-Mer</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+  <section>
+    <img src="polynésie.jpg">
+  </section>
+</body>
+</html>
