--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
 </head>
 <body>
     <header>
-        <img src="media/img/wanderer_logo.png" alt="logo site web">
-        <nav>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li class="menu-deroulant">
-                    <a href="#">Wanderers</a>
-                    <ul class="sous-menu">
-                        <li><a class="btn-transition" href="france.html">Félix</a></li>
-                        <li><a class="btn-transition" href="france.html">Fériale</a></li>
-                        <li><a class="btn-transition" href="france.html">Ibni</a></li>
-                        <li><a class="btn-transition" href="france.html">Jérôme</a></li>
-                        <li><a class="btn-transition" href="france.html">Joris</a></li>
-                    </ul>
-                </li>
-                <li class="menu-deroulant">
-                    <a href="#">Continents</a>
-                    <ul class="sous-menu">
-                        <li><a class="btn-transition" href="europe.html">Europe</a></li>
-                        <li><a class="btn-transition" href="asie.html">Asie</a></li>
-                        <li><a class="btn-transition" href="amerique-centrale.html">Amérique Centrale</a></li>
-                        <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <div class="centrage">
+            <img src="media/img/wanderer_logo.png" alt="logo site web">
+            <nav>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li class="menu-deroulant">
+                        <a href="#">Wanderers</a>
+                        <ul class="sous-menu">
+                            <li><a class="btn-transition" href="france.html">Félix</a></li>
+                            <li><a class="btn-transition" href="france.html">Fériale</a></li>
+                            <li><a class="btn-transition" href="france.html">Ibni</a></li>
+                            <li><a class="btn-transition" href="france.html">Jérôme</a></li>
+                            <li><a class="btn-transition" href="france.html">Joris</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-deroulant">
+                        <a href="#">Continents</a>
+                        <ul class="sous-menu">
+                            <li><a class="btn-transition" href="europe.html">Europe</a></li>
+                            <li><a class="btn-transition" href="asie.html">Asie</a></li>
+                            <li><a class="btn-transition" href="amerique-centrale.html">Amérique Centrale</a></li>
+                            <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
