ajouté lien contact & ombres aux liens principaux

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
                         </ul>
                     </li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
